force-app/main/default/objects/KCPQ_Location__c/KCPQ_Location__c.object-meta.xml
<CustomObject>
    <label>DC Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DC Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>