force-app/main/default/objects/KCPQ_Location__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DC Locations</relationshipLabel>
    <relationshipName>DC_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>