force-app/main/default/objects/KCPQ_Location__c/fields/Buy__c.field-meta.xml
<CustomField>
    <fullName>Buy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy</label>
    <type>Checkbox</type>
</CustomField>