force-app/main/default/objects/KCPQ_Location__c/fields/KCPQ_Inventory_Available__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Inventory_Available__c</fullName>
    <label>Inventory Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>