force-app/main/default/objects/KCPQ_Location__c/fields/KCPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>DC Locations</relationshipLabel>
    <relationshipName>DC_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>