force-app/main/default/objects/KCPQ_Location__c/fields/Sellable__c.field-meta.xml
<CustomField>
    <fullName>Sellable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sellable</label>
    <type>Checkbox</type>
</CustomField>