force-app/main/default/objects/KCPQ_Location__c/fields/Stockable__c.field-meta.xml
<CustomField>
    <fullName>Stockable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stockable</label>
    <type>Checkbox</type>
</CustomField>