force-app/main/default/objects/KCPQ_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KCPQ_Inventory_Available__c</columns>
    <columns>Location_Id__c</columns>
    <columns>KCPQ_Product__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>